--- a/Level 13/Homework/Home.html
+++ b/Level 13/Homework/Home.html
@@ -36,5 +36,14 @@
         </p>
         <hr>
         
+        <nav>
+            <a href="contact us.html">contact us</a><br>
+            <a href="reviews.html">gadgets</a><br>
+            <a href="reviews.html">reviews</a><br>
+            <a href="TV and Monitors.html">TV and Monitors</a><br>
+            <a href="Laptops.html">Laptops</a><br>
+            <a href="Consoles.html">Consoles</a><br>
+        </nav>
+    
     </body>
 </html>
