--- a/Level 13/Homework/TV and Monitors.html
+++ b/Level 13/Homework/TV and Monitors.html
@@ -185,6 +185,15 @@
         DVB-S<br>
     </p>
     <hr>
+    <nav>
+        <a href="contact us.html">contact us</a><br>
+        <a href="reviews.html">gadgets</a><br>
+        <a href="reviews.html">reviews</a><br>
+        <a href="Consoles.html">Consoles</a><br>
+        <a href="Laptops.html">Laptops</a><br>
+        <a href="Home.html">home</a><br>
+    </nav>
+
 
     </body>
 </html>
